styles.less
@import "variables2.less";

// General styles
html {
  font-size: 16px;
}

body {
  margin: 0 auto;
  font-family: @font-body;
  color: @text-body;
  border-top: 5px solid @primary-color;
  line-height: 2.5rem;

  a {
    color: #767A85;
    transition: all .2s ease;
  }

  a:link {
    text-decoration: none;
  }

  a:hover {
    color: lighten(@link-color, 20%);
  }

  ul {
    width: 100%;
    display: flex;
    justify-content: space-between;
    list-style: none;
  }

  h1 {
    font-weight: 600;
  }
  
  h2 {
    font-size: 1.5rem;
    font-weight: 600;
  }

  p {
    padding-bottom: 2rem;
    line-height: 1.8rem;
  }

  .hide {
    visibility: hidden !important;
  }

  @media (min-width: 450px) {
    border-top: 0;
  }
}

main {
  width: 100%;
  padding-top: 5rem;
}

// End of general styles

// Header for all pages
header {
  background: @gradient;
  nav {
    display: flex;
    align-items: center;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    transition: all .5s ease;

    #avatar {
      width: 70px;
      margin: 1.5rem;
      img {
        height: 75px;
        padding: 0;
        transition: all .5s ease;
      }
    }
   
    ul {
      justify-content: space-around;
      max-width: 400px;
      margin: 1.5rem auto;
      padding: 0;
      transition: all .5s ease;
      li {
        font-size: 1rem;
        letter-spacing: .5px;
        transition: all .5s ease;
      }
      li:hover {
        border-color: @border-color;
        border-radius: 25px;
        color: @link-color;
        transition: all 0.5s ease;
      }
    }

    #nav_inactive {
      color: lighten(@link-color, 15%);
    }

    .sticky {
      position: fixed;
    }

    @media (min-width: 600px) {
      #avatar {
        width: 100%;
        margin: 1.5rem 5rem;
        img {
          height: 100px;
          padding: 0;
        }
      }
      ul {
        justify-content: flex-end;
        margin-right: 3rem;
        li {
          padding-left: 4rem;
        }
      }
    }
    @media (min-width: 900px) {
      ul {
        margin-right: 6rem;
      }
    }
  }

  // Hero section
  .hero {
    width: 100%;
    height: 350px;
    padding-top: 7rem;
    transition: all .5s ease;
  }

  .uvp {
    margin: 0 auto;
    padding: 5rem 2rem;
    text-align: center;
    transition: all .5s ease;

    h1 {
      font-family: @font-heading;
      font-size: 1.2rem;
      letter-spacing: -0.5px;
      line-height: 2.1rem;
      padding: 0;
      color: lighten(@text-body, 20%);
      transition: all .5s ease;
    }
    span {
      color: @primary-color;
    }
  }
}

  // Media query 400px - hero section
  @media (min-width: 400px) {
    .hero {
      .uvp {
        margin: 0 auto;
        max-width: 400px;
        h1 {
          font-size: 1.3rem;
          line-height: 2.25rem;
          transition: all .5s ease;
        }
      }
    }
  }
  // Media query 700px - hero section
  @media (min-width: 700px) {
    .hero {
      .uvp {
        width: 100%;
        max-width: 700px;
        margin: 0;
        padding: 5rem;

        h1 {
          width: 80%;
          margin: 0;
          padding-left: 1rem;
          text-align: left;
          transition: all .5s ease;
        }
      }
    }
  }
  // Media query 1000px - hero section
  @media (min-width: 1000px) {
    .hero {
      .uvp {
        h1 {
          font-size: 1.5rem;
          line-height: 2.5rem;
          width: 90%;
          padding-left: 3rem;
          transition: all .5s ease;
        }
      }
    }
  }
// Media query 1400px - hero section
  @media (min-width: 1400px) {
    .hero {
      .uvp {
        h1 {
          font-size: 1.75rem;
          line-height: 2.75rem;
          padding-left: 12rem;
          transition: all .5s ease;
        }
      }
    }
  }
// End of header all pages

// Home page case study
.reverse {
  padding-top: 5rem;
}

.case-study {
  margin: 0 auto;
  max-width: 900px;
  padding: 3rem 3rem 5rem 3rem;
  
  .link {
    padding: 0;
  }

  // Case study images
  #qb-image {
    display: flex;
    justify-content: center;
    img {
      height: 300px;
      transition: all 1s ease;
    }
  }
  #rvway-image {
    display: flex;
    justify-content: center;
    img {
      height: 200px;
      transition: all 1s ease;
    }
  }
  .case-title {
    font-family: @font-heading;
    color: lighten(@primary-color, 5%);
    line-height: 2.5rem;
  }
  .case-desc {
    line-height: 2rem;
  }

  // Media query 600px for homepage case study
  @media (min-width: 600px) {
    .case-text {
      width: 500px;
      margin: 0 auto;
      .case-title {
        padding: 1rem 0;
      }
      .case-desc {
        padding-bottom: 2rem;
      }
    }
    #rvway-image {
      padding: 0;
      img {
        height: 250px;
      }
    } 
  }
  // Media query 900px for homepage case study
  @media (min-width: 900px) {
    display: flex;
    justify-content: center;
    width: 85%;
    padding-bottom: 10rem;

    #qb-image {
      padding: 0;
      img {
        height: 300px;
        padding-left: 2rem;
      }
    } 
    #rvway-image {
      padding: 0;
      img {
        height: 250px;
        padding-right: 1rem;
      }
    } 
    .case-text {
      margin: 0;
      width: 50%;
      .case-title {
        margin-bottom: 1rem;
        padding: 0;
      }
    }
  }
  
  // Read case button
  .link {
    padding: 1rem 0;
    a:link {
      font-size: 1.25rem;
      font-weight: 500;
    }
  }
  
  button {
    font-size: .8rem;
    font-family: @font-body;
    font-weight: 500;
    padding: .75rem 2rem;
    background-color:#FFFFFF;
    border-color: @border-color;
    border-radius: 25px;
    color: @link-color;
    transition: all 0.5s ease;
  }
  
  button:hover {
    background-color: @link-color;
    color: white;
  }
}  

@media (min-width: 900px) {
  .reverse {
    flex-direction: row-reverse;
    align-items: center;
  }
}
// End of Home page case study

// Connect styles for all pages
.connect {
  width: 100%;
  padding: 5rem 0;
  color: @gray;
  background-color: @primary-color;
  font-family: @font-heading;
  text-align: center;

  .blurb {
    width: 80%;
    margin: 0 auto;
    line-height: 1.5rem;
    font-weight: 300;
  }

  h1 {
    margin: 3rem 0 .5rem 0;
    font-family: @font-heading;
    font-size: 2.25rem;
    text-align: center;
  }

  #email {
    color: @gray;
    font-size: 1rem;
    text-align: center;
    font-weight: 400;
    margin: 0 0 0.5rem 0;
  } 
  .social {
    width: 100%;
    margin-top: 2rem;
    text-align: center;
    .fab {  
      padding: 0 1.25rem;
      font-size: 2.5rem;
      color: @gray;
    }
    .fab:hover {
      color: #FFFFF;
      transition: 0.5s;
      -moz-transition: 0.5s;
      -webkit-transition: 0.5s;
      -o-transition: 0.5s;
      -webkit-filter:	drop-shadow(0 1px 10px rgba(0,0,0,.9));
      -moz-filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));
      -ms-filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));
      -o-filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));
      filter: drop-shadow(0 1px 10px rgba(0,0,0,.9));	 	
    }
  }

  @media(min-width: 500px) {
    h1 {
      font-size: 3rem;
      margin-bottom: 1rem;
      transition: all 0.5s ease;
    }

    .blurb {
      font-size: 1.25rem;
    }

    #email {
      font-size: 1.25rem;
      transition: all 0.5s ease;
    }
  }

}
// End of Connect styles for all pages

// Footer styling for all pages
footer {
  display: flex;
  justify-content: space-around;
  background-color: @footer-back;
  padding: 0 2rem;
  ul {
    padding: 2rem 0;
    text-align: center;
    li {
      color: @text-body;
      font-size: 0.75rem;
      vertical-align: middle;

      img {
        width: auto;
        height: 15px;
        vertical-align: middle;
      }
    }
  }

  // Footer media query
  @media (min-width: 500px) {
    ul {
      max-width: 400px;
      li {
        font-size: .9rem;
      }
    }
  }
}

